tests/ui/err/item-is-not-a-function.rs
#[logfn::logfn("info")]
struct S;

fn main() {}
